Solve day 7 and 8

--- a/AdventOfCode2020.csproj
+++ b/AdventOfCode2020.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Input\08.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\07.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\06.in">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
