--- a/AdventOfCode2020.csproj
+++ b/AdventOfCode2020.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Input\11.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\10.in">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
